@@ -270,6 +270,19 @@ suite("cli/run", () => {
     assert(!fs.existsSync(`${outDir}.stage`), "run core stage dir must not be created on policy/out conflict");
   });
 
+  register("run fails closed when out path is an existing file", async () => {
+    const root = makeTempDir();
+    const outFile = path.join(root, "out.txt");
+    fs.writeFileSync(outFile, "keep", "utf8");
+    const inputPath = path.join(process.cwd(), "tests", "fixtures", "intake", "safe_no_caps");
+    const policyPath = path.join(process.cwd(), "policies", "web_component_default.json");
+    const result = await runCliCapture(["run", inputPath, "--policy", policyPath, "--out", outFile]);
+    assertEq(result.status, 40, `expected run out-file fail-closed exit code\n${result.stderr}`);
+    assert(result.stderr.includes("RUN_OUT_PATH_NOT_DIRECTORY"), "expected RUN_OUT_PATH_NOT_DIRECTORY stderr");
+    assertEq(fs.readFileSync(outFile, "utf8"), "keep", "existing out file must not be replaced");
+    assert(!fs.existsSync(`${outFile}.stage`), "run stage dir must not be created when out is a file");
+  });
+
   register("intake fails closed when out path overlaps policy file", async () => {
     const root = makeTempDir();
     const outDir = path.join(root, "out");
@@ -317,6 +330,18 @@ suite("cli/run", () => {
     assert(errors.some((line) => line.includes("EXAMINE_OUT_CONFLICTS_SCRIPT")), "expected EXAMINE_OUT_CONFLICTS_SCRIPT stderr");
     assert(fs.existsSync(scriptPath), "script file must remain present after examine core script/out conflict");
     assert(!fs.existsSync(`${outDir}.stage`), "examine core stage dir must not be created on script/out conflict");
+  });
+
+  register("examine fails closed when out path is an existing file", async () => {
+    const root = makeTempDir();
+    const outFile = path.join(root, "out.txt");
+    fs.writeFileSync(outFile, "keep", "utf8");
+    const inputPath = path.join(process.cwd(), "tests", "fixtures", "intake", "safe_no_caps");
+    const result = await runCliCapture(["examine", inputPath, "--out", outFile, "--profile", "web"]);
+    assertEq(result.status, 40, `expected examine out-file fail-closed exit code\n${result.stderr}`);
+    assert(result.stderr.includes("EXAMINE_OUT_PATH_NOT_DIRECTORY"), "expected EXAMINE_OUT_PATH_NOT_DIRECTORY stderr");
+    assertEq(fs.readFileSync(outFile, "utf8"), "keep", "existing out file must not be replaced");
+    assert(!fs.existsSync(`${outFile}.stage`), "examine stage dir must not be created when out is a file");
   });
 
   register("intake finalizes staged output and replaces stale roots", async () => {
